# musetalk-mlx

./: .gitignore  README.md  pyproject.toml
_research/: PREFLIGHT.md
goldens/: mel_hf_golden.npy  unet_head_report.txt  unet_key_inventory.txt  whisper_encoder_key_inventory.txt
musetalk_mlx/: __init__.py  config.py  pipeline_mlx.py
musetalk_mlx/models/: unet.py  vae.py
musetalk_mlx/utils/: weights.py
musetalk_mlx/whisper/: audio2feature.py  log_mel.py  whisper_encoder.py
musetalk_mlx/whisper/assets/: mel_filters_80.npy
scripts/: bench_realtime.py  build_video.py  capture_audio_golden.py  capture_pipeline_golden.py  capture_unet_golden.py  capture_vae_golden.py  compare_real.py  download_dvisual_weights.py  download_weights.py  export_mlx.py  extract_landmarks.py  publish.py  write_cards.py
tests/parity/: test_audio_parity.py  test_mel_parity.py  test_pipeline_parity.py  test_unet_parity.py  test_vae_parity.py
tests/smoke/: test_config.py  test_published_smoke.py  test_realtime_smoke.py  test_unet_smoke.py  test_vae_smoke.py
